[package]
name = "objectmap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"
repository = "https://github.com/khonsulabs/objectmap"
readme = "./README.md"

[dependencies]
serde = { version = "1.0.163", default-features = false, optional = true }

[workspace]
members = ["benchmarks", "xtask"]
